# lspmux-cc

./: .envrc  .gitignore  .lsp.json  .mcp.json  CLAUDE.md  Justfile  README.md  flake.nix  setup
.claude-plugin/: marketplace.json  plugin.json
config/: lspmux.toml
docs/brainstorms/: 2026-02-05-lspmux-claude-code-brainstorm.md  2026-03-18-local-dev-cache-optimization.md  2026-03-18-observability-and-reuse-roadmap.md  2026-03-18-per-worktree-socket-routing.md
docs/hosts/: claude-code.md  codex.md  generic-mcp.md
hooks/: hooks.json
hooks/scripts/: post-file-edit.sh  session-start.sh
launchd/: com.lspmux.server.plist  com.rust-analyzer.update.plist
mcp-server/: Cargo.toml
mcp-server/src/: bootstrap.rs  lib.rs  lsp_client.rs  main.rs  telemetry.rs  tools.rs
mcp-server/tests/: integration.rs
plugins/lspmux-rust-cc/: .mcp.json
plugins/lspmux-rust-cc/.claude-plugin/: plugin.json
plugins/lspmux-rust-cc/hooks/scripts/: post-file-edit.sh  (+1 more)
skills/diagnose-lspmux/reference/: connection-troubleshooting.md
systemd/: lspmux.service  rust-analyzer-update.service  rust-analyzer-update.timer
tests/: test-hooks.sh  test-mcp-wrapper.sh  test-rust-analyzer-wrapper.sh  test-setup.sh  test-update-rust-analyzer.sh
todos/: 2026-03-18-compiler-action-and-artifact-reuse-accounting.md  2026-03-18-crate-replacement-opportunities.md  2026-03-18-linux-hook-bootstrap-parity.md  2026-03-18-observability-and-client-attribution.md  2026-03-18-shell-error-suppression-audit.md  review-2026-03-18-p1-critical.md  review-2026-03-18-p2-important.md  review-2026-03-18-p3-cleanup.md
(+3 files in other folders)
